<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">惠话</string>
    <string name="tab_dial">拨号键盘</string>
    <string name="tab_contact">通讯录</string>
    <string name="tab_guanwang">微官网</string>
    <string name="tab_shop">微商城</string>
    <string name="tab_im">个人中心</string>
    <string name="main_weiguanwang">官网</string>
    <string name="main_weishop">商城</string>
    <string name="help">帮助中心\n
		Q:我用包月套餐，那应该怎么办？\n
		A:按三大运营商的现有资费，您可以优化如下：\n
		1、移动用户\n
		a.商旅人士请申请为全球通58套餐，建议选择上网版（各地政策略有不同，请咨询10086）。\n
		b.本地人去外地较少或较固定的，请申请为神州行0月租套餐，并开通流量包。\n
		2、联通和电信用户\n
		申请最低资费套餐即可。商旅人士可选择全国接听免费的套餐。\n
		重要提示： \n
		1、 出现问题，首先进入软件查看余额。\n
		2、 余额正常的话请重启手机。\n
		3、 重启手机解决不了的话，就重新安装下软件。\n
		4、 上述一切都正常的话，请确认手机有没有装360或者腾讯管家之类陌生号码拦截软件。有的话，卸载或者关闭即可。\n
		5、 查看手机本身是否欠费。是否能用流量正常上网。\n
		6、 查看手机软件登录的手机号是否为本机号码。\n
		7、 使用网络电话进行回拨通话。如果出现拨打一定时间自动挂断，可能是你的通话设备的原因，比如手机故障，或者手机信号不好。 \n
		Q:人在外地可以用吗？\n
		A:只要您的手机信号良好均可正常使用。需要提醒的是需要您的手机接听免费。具体资费请咨询运营商。\n
		Q:为什么我的话费还是少了？\n
		A:原因一：运营商的话费包括很多项目，月初会扣很多基础费用，只要您是接听免费，是不会被额外扣费的。\n
		原因二：您开启的微信、QQ及其他手机自带程序会自动在后台启动并联网（即使您没有主动运行），可能将产生流量费用，请检查费用产生的原因。\n
		需要特别说明的是：若手机没有wifi连接，才需要使用移动数据网络，每次拨号大概需要1-2kB流量（1M=1024KB），此外整个通话过程主叫方其实是接听电话，故无需WiFi/3G/4G网络支持，不耗费任何流量！请谨记！\n
		Q:为什么挂机后还在拨号？\n
		A:原因一：通话时手机运行其他软件消耗大量内存，导致软件呼叫界面无法伴随挂机而正常退出。\n
		原因二：通话过程中有其他号码呼入，导致异常。\n
		解决办法：发现继续呼叫后及时挂断，同时拒接稍后的系统来电。\n
		Q:为什么会出现串线？\n
		A:原因一：拨打中途挂断，再拨打其他的号码时，回拨接通的仍然是首个号码，导致“串线”；\n
		原因二：拨打过程中有其他电话打入，手机无法处理同时来电，用户以为“串线”；\n
		未知原因：完全不认识的人接听电话，请记录下串线的时间（具体到秒），提供给公司客服。\n
		Q:为什么没有回拨，或者回拨后被自动挂断？\n
		A:原因一：检查手机是否拦截陌生号码和未知来电。\n
		原因二：频繁拨打导致系统无法及时响应，请稍后几分钟再试。\n
		Q:为什么呼叫成功，然后就没反应了？\n
		A:原因一：检查手机是否能正常接听电话，手机无信号或信号差、欠费停机将无法使用。\n
		原因二：检查您手机内存是否已满。\n
		原因三：检查软件设置中手机号码是否和您的号码一致。\n
		原因四：高峰时段服务器繁忙无法及时响应，请稍后再试。\n
		Q:为什么显示呼叫失败？\n
		A:原因一：请等待软件同步数据，首次安装运行时需等待一分钟左右。\n
		原因二：检查你的软件余额。\n
		原因三：检查您的数据连接是否启用。\n
		Q:为什么没有呼叫前提示？\n
		A:原因一：检查程序是否被手机系统允许运行。\n
		原因二：进入设置，看是否选择了呼叫前提示。\n
		原因三：手机系统运存不足，请清理手机内存或重启手机。\n
		Q:为什么我打电话对方听不见我的声音？\n
		A:因为软件设计为安卓用户可以自动控制手机接通导致一些不可预知情况，建议您如果多次拨打电话出现这样的问题在手机软件里—》广场—》设置—》自动接听取消掉。或者您观察一下在您接通电话的时候，手机自带的静音键是否开启。
	</string>

</resources>
