<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <android.support.v4.view.ViewPager
        android:id="@+id/id_viewpager"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </android.support.v4.view.ViewPager>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="54dp"
        android:background="@drawable/tabbg"
        android:orientation="horizontal" >

        <com.saiman.smcall.view.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_one"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:icon="@drawable/tab_dial_n"
            app:text="@string/tab_dial"
            app:text_size="12sp" />

        <com.saiman.smcall.view.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_two"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:icon="@drawable/tab_contact_up"
            app:text="@string/tab_contact"
            app:text_size="12sp" />

        <com.saiman.smcall.view.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_three"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:icon="@drawable/tab_guanwang_normal"
            app:text="@string/tab_guanwang"
            app:text_size="12sp" />

        <com.saiman.smcall.view.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_four"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:icon="@drawable/tab_shop_normal"
            app:text="@string/tab_shop"
            app:text_size="12sp" />
        <com.saiman.smcall.view.ChangeColorIconWithTextView
            android:id="@+id/id_indicator_five"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:icon="@drawable/tab_im_up"
            app:text="@string/tab_im"
            app:text_size="12sp" />
    </LinearLayout>

</LinearLayout>